# smelter-optimisation-assignment

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  main.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  solution.py
.github/workflows/: ci-cd.yml  python-package.yml
api_reference/models/: index.html
api_reference/neighbourhood/: index.html
api_reference/solver/: index.html
api_reference/utils/: index.html
data/: initial_solution.csv
docs/: index.md  models.md  neighbourhood.md  solver.md
docs/api_reference/: neighbourhood.md
models/: index.html
neighbourhood/: index.html
smelter_optimisation/: __init__.py  config.py  models.py  neighbourhood_rule.py  plot_objective.py  solver.py  utils.py
smelter_optimisation/data/: quality.csv
smelter_optimisation/solver/: crucible.py  models.py  neighbourhood_rule.py  pot.py  solution.py  solver.py
solver/: index.html
tests/: test_models.py  test_neighbourhood_rule.py  test_solver.py
utils/: index.html
