[tool.poetry]
name = "smelter_optimisation"
version = "0.1.0"
description = "Python implementation of an old uoa optimisation assignment"
authors = ["Louis Jarvis"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
