[tool.poetry]
name = "smelter_optimisation"
version = "0.1.0"
description = "Python implementation of an old uoa optimisation assignment"
authors = ["Louis Jarvis"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401",  # imperative mood
    "D105"   # missing docstring in average method.
]

[tool.ruff.lint.pydocstyle]
convention = "google"
