[tool.poetry]
name = "smelter_optimisation"
version = "0.1.0"
description = "Python implementation of an old uoa optimisation assignment"
authors = ["Louis Jarvis"]
license = "MIT"
readme = "README.md"
packages = [{include = "smelter_optimisation"}]
include = [
    "smelter_optimisation/data/*.csv"
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
pyqt5 = "^5.15.11"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.47"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mkdocstrings-python = "^1.8.0" 

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
pytest = "^8.3.4"
isort = "^5.13.2"
mypy = "^1.14.1"
python-semantic-release = "^9.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["main.py", "tests*"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "W293", # blank line contains whitespace
    "D401",  # imperative mood
    "D104",   # dont need dosctrings in __init__.py
    "D105",   # missing docstring in average method.
    "D102",  # missing docstring in public method,
    "D107"  # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.semantic_release]
# necessary for python semantic release to automatically update the version in pyproject.toml
# see more at https://py-pkgs.org/07-releasing-versioning#step-5-tag-a-release-with-version-control
version_variable = "pyproject.toml:version"
